[package]
name = "tinymd"
version = "0.1.0"
edition = "2021"
authors = ["Jon Nurminen <jon05.nurminen@gmail.com>"]
description = "A tiny markdown compiler written in rust"
homepage = "https://github.com/mrJontismo/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
